drills/networking/netpol-deny-all/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: security-lockdown
spec:
  podSelector: {}
  policyTypes:
  - Ingress
